2009-03-16  Tor Lillqvist  <tml@iki.fi>

	* app/version.c (gimp_show_library_version): The build-time and
	run-time versions were swapped in the output.

2009-03-14  Sven Neumann  <sven@gimp.org>

	Bug 566443 – diagonal method guidelines for crop tool

	* app/tools/tools-enums.[ch]
	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw_guides):
	applied a slightly modified patch from Lukasz Hladowski, based on
	a patch from Tim Jedlicka. This adds diagonal guidelines as
	described by Edwin Westhoff to the rectangle tools.

2009-03-13  Sven Neumann  <sven@gimp.org>

	Bug 574427 – Stroke path with paint tool error

	* app/dialogs/stroke-dialog.c: construct the combo-box that
	selects the paint-info object with the GimpStrokeOptions as
	context. Makes the code much easier and fixes bug #574427.

2009-03-13  Sven Neumann  <sven@gimp.org>

	Bug 571117 – lcms plug-in crashes on broken profile

	* plug-ins/common/lcms.c: don't abort on lcms errors.

2009-03-13  Sven Neumann  <sven@gimp.org>

	Bug 575006 – Add preferences for snapping

	* app/config/gimpdisplayconfig.[ch]
	* app/config/gimprc-blurbs.h
	* app/display/gimpdisplayshell.c: applied part of a patch from
	Akkana Peck. This adds gimprc properties for the default values
	used for snapping in new image windows. It also changes the
	default value for "Snap to Canvas Edges" to TRUE. Let's test this
	for a while...

2009-03-12  Sven Neumann  <sven@gimp.org>

	Bug 573695 – 1-bit white background saved as PBM becomes all black

	* plug-ins/common/file-pnm.c: look at the colormap and test which
	of the two colors is black and which is white.

2009-03-12  Sven Neumann  <sven@gimp.org>

	Bug 573070 – crash when working with 1x3200 pixel image

	* app/display/gimpdisplayshell.c (gimp_display_shell_scale_changed):
	make sure that x_src_dec and y_src_dec never become zero.

2009-03-11  Sven Neumann  <sven@gimp.org>

	* app/core/gimpscanconvert.c (gimp_scan_convert_render_full):
	formatting.
