@@ -408,6 +408,11 @@ name|gchar
 modifier|*
 name|title
 decl_stmt|;
+specifier|const
+name|gchar
+modifier|*
+name|uri
+decl_stmt|;
 if|if
 condition|(
 name|shell
@@ -427,6 +432,16 @@ argument_list|)
 expr_stmt|;
 return|return;
 block|}
+name|uri
+operator|=
+name|gimp_object_get_name
+argument_list|(
+name|GIMP_OBJECT
+argument_list|(
+name|image
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|title
 operator|=
 name|g_strdup_printf
@@ -473,9 +488,7 @@ argument_list|(
 name|title
 argument_list|)
 expr_stmt|;
-name|button
-operator|=
-name|gtk_dialog_add_button
+name|gtk_dialog_add_buttons
 argument_list|(
 name|GTK_DIALOG
 argument_list|(
@@ -484,39 +497,22 @@ argument_list|)
 argument_list|,
 name|_
 argument_list|(
-literal|"Do_n't Save"
+literal|"Close _without Saving"
 argument_list|)
 argument_list|,
 name|GTK_RESPONSE_CLOSE
-argument_list|)
-expr_stmt|;
-name|gtk_button_set_image
-argument_list|(
-name|GTK_BUTTON
-argument_list|(
-name|button
-argument_list|)
-argument_list|,
-name|gtk_image_new_from_stock
-argument_list|(
-name|GTK_STOCK_DELETE
-argument_list|,
-name|GTK_ICON_SIZE_BUTTON
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|gtk_dialog_add_buttons
-argument_list|(
-name|GTK_DIALOG
-argument_list|(
-name|dialog
-argument_list|)
 argument_list|,
 name|GTK_STOCK_CANCEL
 argument_list|,
 name|GTK_RESPONSE_CANCEL
 argument_list|,
+operator|(
+name|uri
+condition|?
 name|GTK_STOCK_SAVE
+else|:
+name|GTK_STOCK_SAVE_AS
+operator|)
 argument_list|,
 name|RESPONSE_SAVE
 argument_list|,
